<resources>
    <string name="app_name">AndroidCodingLife</string>
    <!-- 通用-->
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>

    <!-- 主页 -->
    <string name="ui">ui</string>
    <string name="function">功能</string>

    <!-- 视图 -->
    <string name="dashboard">仪表盘</string>
    <string name="dashboard_desc">自定义仪表盘控件，满足基本需求</string>
    <!-- 仪表盘控件 -->
    <string name="min_value_hint">请输入最小值</string>
    <string name="max_value_hint">请输入最大值</string>
    <string name="number_of_copies_hint">切分份数</string>
    <string name="real_time_value_hint">请输入当前数值</string>
    <string name="sure">确定</string>
    <string name="min_max_prompt">最大值不能小于最小值</string>
    
    <!-- 功能 -->
    <string name="distinguish">识别文字</string>
    <string name="distinguish_desc">识别图片中文字</string>
    <!-- 识别文字-->
    <string name="show_suspension">是否显示悬浮窗口</string>
    <string name="suspension_prompt">需要授予显示在其他应用上的权限！</string>
</resources>
