<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/activityBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_back" />

    <cn.com.brother.studio.view.DashboardView
        android:id="@+id/dashboard_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/min_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/min_value_hint"
            android:inputType="number" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/max_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/max_value_hint"
            android:inputType="number" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/number_of_copies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number_of_copies_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/real_time_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/real_time_value_hint" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sure"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>
